<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

        <ImageButton
            android:id="@+id/visitor_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/white_button"
            app:layout_constraintBottom_toTopOf="@+id/emer_list_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/emer_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/white_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/report_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/white_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emer_list_btn" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/visitor_list_label"
            android:textColor="@color/aplicondo_red"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/visitor_list_btn"
            app:layout_constraintEnd_toEndOf="@+id/visitor_list_btn"
            app:layout_constraintStart_toStartOf="@+id/visitor_list_btn"
            app:layout_constraintTop_toTopOf="@+id/visitor_list_btn" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:foregroundTintMode="add"
            android:text="@string/emergency_list_label"
            android:textColor="@color/aplicondo_red"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/emer_list_btn"
            app:layout_constraintEnd_toEndOf="@+id/emer_list_btn"
            app:layout_constraintStart_toStartOf="@+id/emer_list_btn"
            app:layout_constraintTop_toBottomOf="@+id/visitor_list_btn" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/report_list_label"
            android:textColor="@color/aplicondo_red"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/report_list_btn"
            app:layout_constraintEnd_toEndOf="@+id/report_list_btn"
            app:layout_constraintStart_toStartOf="@+id/report_list_btn"
            app:layout_constraintTop_toBottomOf="@+id/emer_list_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>